--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"@mui/material": "^5.11.8",
 		"@reduxjs/toolkit": "^1.9.2",
 		"@tabler/icons-react": "^2.4.0",
+		"axios": "^1.8.4",
 		"chart.js": "^4.2.1",
 		"crypto-js": "^4.1.1",
 		"date-fns": "^2.29.3",
