--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 VITE_FORMSPREE_KEY=your_formspree_key
 VITE_CRYPTO_KEY=crypto-js_secret_key
-VITE_API_URL=http://test.200630.xyz:8080/api
+VITE_API_URL=https://test.200630.xyz:8080/api
